--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -3,20 +3,33 @@ img {
   }
 
 .alert{
-  position: relative;
-  top: 50%;
-  text-align: center;
+    position:fixed; 
+    width: 20%;
+    z-index:9999; 
+    border-radius:0px;
+    top: 0px;
+    right: 5px;
 }
 
 .bg {
   /* The image used */
-  background-image: url("../../../assets/background.jpg");
+  /* background-image: url("../../../assets/background.jpg"); */
+  background-color: rgb(63, 104, 139);
 
   /* Full height */
-  height: 100%;
+  height: 100% auto !important;
+  min-height: 100%;
 
   /* Center and scale the image nicely */
-  background-position: center;
+  /* background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+}
+
+.left{
+  width: 100px;
+}
+
+#table{
+  width: 100%;
 }
