--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -27,14 +27,14 @@
           <button type="submit" (click)="tryLogin(this.form.value)" class="btn btn-success" style="float:right; margin:10px;"><b>Log In</b></button>                                                         
     </form>
     <br />
-      <div class="alert alert-danger alert-dismissible fade show" *ngIf="this.error" style="margin-top:30px;" role="alert"> 
+      <div class="alert alert-danger alert-dismissible fade show" *ngIf="this.error" style="margin-top:40px;" role="alert"> 
         {{ this.errorMessage }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert"  aria-label="Close">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"  aria-label="Close" (click)="closeErrorAlert()">
         </button>
       </div>
-      <div class="alert alert-success alert-dismissible fade show" *ngIf="this.success" style="margin-top:30px;" role="alert"> 
+      <div class="alert alert-success alert-dismissible fade show" *ngIf="this.success" style="margin-top:40px;" role="alert"> 
         {{ this.successMessage }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert"  aria-label="Close">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"  aria-label="Close" (click)="closeSuccessAlert()">
         </button>
       </div>
     </article>
