--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -11,10 +11,13 @@ body, html {
     background-image: url("../../../assets/background.jpg");
   
     /* Full height */
-    height: 100%;
+    height: 100% !important;
   
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    width: 100vw;
+    min-height: 100vh;
 }
