--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,9 @@ body, html{
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
+    background-color: rgb(63, 104, 139);
+    /* Center and scale the image nicely */
+    /* background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
   }
