--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -6,7 +6,7 @@
 
     
     <div class="row">
-        <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
+        <div class="col">
 
     <div class="card text-white bg-dark mb-4">
     <article class="card-body">
